--- a/login.html
+++ b/login.html
@@ -17,6 +17,9 @@
       <h3>Login</h3>
       <form action="" class="form-control">
         <input type="text" name="" id="loginEmail" class="form-control" />
+        <input type="password" id="loginSenha" class="form-control" />
+        <br />
+        <button class="btn btn-warning">ACESSAR</button>
       </form>
     </div>
     <script src="controller.js"></script>
