--- a/login.html
+++ b/login.html
@@ -16,8 +16,19 @@
     <div class="container col-4">
       <h3>Login</h3>
       <form action="" class="form-control">
-        <input type="text" name="" id="loginEmail" class="form-control" />
-        <input type="password" id="loginSenha" class="form-control" />
+        <input
+          type="text"
+          name=""
+          id="loginEmail"
+          class="form-control"
+          placeholder="Informe o e-mail"
+        />
+        <input
+          type="password"
+          id="loginSenha"
+          class="form-control"
+          placeholder="Informe a senha"
+        />
         <br />
         <button class="btn btn-warning">ACESSAR</button>
       </form>
