atualização cadastro.html

--- a/cadastro.html
+++ b/cadastro.html
@@ -16,7 +16,17 @@
     <div class="container">
       <label for="">Nome:</label>
       <input type="text" class="form-control" id="nomeUser" />
-      <button type="btn btn-dark">Salvar</button>
+      <br>
+      <button type="button" class="btn btn-dark">Salvar</button>
+    </div>
+    <br>
+    <div class="container">
+        <table class="table table-striped" id="tabela">
+            <tr>
+                <th>Nome Usúario</th>
+                <th>Ações</th>
+            </tr>
+        </table>
     </div>
     <script src="controller.js"></script>
   </body>
