evento onclick button

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
           placeholder="Informe a senha"
         />
         <br />
-        <button class="btn btn-warning">ACESSAR</button>
+        <button type="button" onclick="acessar()"class="btn btn-warning">ACESSAR</button>
       </form>
     </div>
     <script src="controller.js"></script>
