--- a/cadastro.html
+++ b/cadastro.html
@@ -11,13 +11,14 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="container">
       <label for="">Nome:</label>
       <input type="text" class="form-control" id="nomeUser" />
       <br />
-      <button type="button" class="btn btn-dark">Salvar</button>
+      <button type="button" onclick="salvarUser()" class="btn btn-dark">Salvar</button>
     </div>
     <br />
     <div class="container">
