--- a/cadastro.html
+++ b/cadastro.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="container">
-      <label for="">Nome:</label>
+    <div id="Cadastro" class="container">
+      <label class="nome"for="">Nome:</label>
       <input type="text" class="form-control" id="nomeUser" />
       <br />
       <button type="button" onclick="salvarUser()" class="btn btn-dark">Salvar</button>
