--- a/cadastro.html
+++ b/cadastro.html
@@ -17,6 +17,8 @@
     <div id="Cadastro" class="container">
       <label class="nome"for="">Nome:</label>
       <input type="text" class="form-control" id="nomeUser" />
+      <label class="EmailUser"for="">Email:</label>
+      <input type="text" class="form-control" id="EmailUser" />
       <br />
       <button type="button" onclick="salvarUser()" class="btn btn-dark">Salvar</button>
     </div>
@@ -25,6 +27,7 @@
       <table class="table table-striped" id="tabela">
         <tr>
           <th>Nome Usúario</th>
+          <th>Email</th>
           <th>Ações</th>
         </tr>
       </table>
