adição limite de caracteres

--- a/cadastro.html
+++ b/cadastro.html
@@ -16,9 +16,9 @@
   <body>
     <div id="Cadastro" class="container">
       <label class="nome"for="">Nome:</label>
-      <input type="text" class="form-control" id="nomeUser" />
-      <label class="EmailUser"for="">Email:</label>
-      <input type="text" class="form-control" id="EmailUser" />
+      <input type="text" class="form-control" id="nomeUser"  maxlength= "60"/>
+      <label class="EmailUser"for="email">Email:</label>
+      <input type="text" class="form-control" id="EmailUser" maxlength= "50"/>
       <br />
       <button type="button" onclick="salvarUser()" class="btn btn-dark">Salvar</button>
     </div>
