limite de caracteres

--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
           id="loginEmail"
           class="form-control"
           placeholder="Informe o e-mail"
+          maxlength= "50"
         />
         <br />
         <input
@@ -31,6 +32,7 @@
           id="loginSenha"
           class="form-control"
           placeholder="Informe a senha"
+          maxlength= "25"
         />
         <br />
         <button type="button" onclick="acessar()" class="btn btn-warning">
