correção código login.html

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
       
         <input
           type="text"
-          name=""
+          name="Email"
           id="loginEmail"
           class="form-control"
           placeholder="Informe o e-mail"
@@ -38,7 +38,8 @@
         <button type="button" onclick="acessar()" class="btn btn-warning">
           ACESSAR
         </button>    
-      </div>
+      </form>
+    </div>
     <script src="controller.js"></script>
   </body>
 </html>
