--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
           maxlength= "25"
         />
         <br />
-        <button type="button" onclick="acessar()" class="btn btn-warning">
+        <button type="button" onclick="checarEmail()" class="btn btn-warning">
           ACESSAR
         </button>    
       </form>
