--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
       
         <input
           type="text"
-          name="Email"
+          name="email"
           id="loginEmail"
           class="form-control"
           placeholder="Informe o e-mail"
